--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
      #header {
   width: 100%;
  height:600px;
-  background-image: url(/bg.png);
+  background-image: url(images/bg.png);
   background-repeat: no-repeat;
   background-position: right;
   background-size: auto; /* or 'contain' */
